# Sandbox

./: CMakeLists.txt  README.md
include/: camera.hpp  physics.hpp  program.hpp  shape.hpp  transform.hpp  window.hpp
shaders/: fragment.frag  vertex.vert
src/: application.cpp  main.cpp  renderer.cpp  sandbox.cpp  window.hpp
src/shaders/: fragment.frag  vertex.vert
